--- a/css/reset.css
+++ b/css/reset.css
@@ -3,4 +3,10 @@
     margin: 0;
     box-sizing: border-box;
     text-decoration: none;
+    border: 0px;
+}
+
+html{
+    height: 100vh;
+    width: 100vw;
 }
