--- a/css/header.css
+++ b/css/header.css
@@ -1,20 +1,14 @@
-header {
+body>header {
     width: 100vw;
-    height: 11.5vh;
-    padding: 2vh 6vw;
+    height: 10vh;
+    padding: 2vh 1.6vw;
     border-bottom: 1px solid #B8B8B8;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
-    img#logo_img{
-        width: 12vw;
+    img#return_img{
+        height: 3vw;
         cursor: pointer;
-    }
-
-    button{
-        width: 9vw;
-        height: 5vh;
-        font-size: 1rem;
     }
 }
