--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,6 @@
 :root{
     --primary-color: #486284;
-    --bege: #FFF3DC;
+    --text-color: #FFF3DC;
 }
 
 @font-face {
@@ -14,70 +14,147 @@
 
 body{
     height: 100vh;
+    background-color: #FFF3DC;
 }
 
 button{
     background-color: var(--primary-color);
-    color: var(--bege);
+    color: var(--text-color);
     cursor: pointer;
+}
+
+.wave{
+    position: absolute;
+    height: 80vh;
+    width: 50vw;
+    opacity: 50%;
+    object-fit: fill;
+    z-index: -1;
+}
+
+#background_wave_left{
+    top: 0;
+    left: 0;
+}
+
+#background_wave_right{
+    bottom: 0;
+    right: 0;
 }
 
 main#container {
     border: 1px solid #B8B8B8;
+    border-radius: 15px;
+    background-color: #982546;
 
-    margin: 13.6vh auto 0 auto;
-    padding: 3vh 0;
-    width: 50vw;
-    min-height: 52vh;
-
+    margin: 2vh auto 0 auto;
+    padding: 2vh 0;
+    width: 45vw;
+    /* height: 70vh; */
+    
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
 
-    h1{
-        font-family: DM_Sans;
-        color: var(--primary-color);
+    header{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        min-height: 10vh;
+        padding: 20px;
+
+        img{
+            /* position: absolute;
+            top: 2vh;
+            left: 2vw; */
+            width: 18vw;
+        }
+
+        h1{
+            font-family: DM_Sans;
+            color: var(--text-color);
+            margin: 2vh 0;
+        }
     }
 
     form{
         width: 40vw;
-        /* height: 70vh; */
-        margin: 2vh 0;
+        margin: 1vh 0 2vh 0;
 
         display: flex;
         flex-direction: column;
-        /* align-items: center; */
-        gap: 5vh;
+        gap: 3vh;
 
-        input{
-            font-family: DM_Sans;
-            font-size: 1rem;
-            border-bottom: 1px solid black;
-            padding: 0px 20px;
-            color: #8CA2C0;
+        .form_div{
+            width: 100%;
+
+            label{
+                display: block;
+                color: var(--text-color);
+                font-family: DM_Sans;
+                margin-bottom: 3px;
+            }
+
+            input{
+                width: 100%;
+                height: 5vh;
+                border-radius: 0.8vw;
+                font-family: DM_Sans;
+                font-size: 1rem;
+                padding: 0px 20px;
+            }
+        }
+
+        #form_div_passwords{
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+
+            div{
+                label{
+                    display: block;
+                    color: var(--text-color);
+                    font-family: DM_Sans;
+                    margin-bottom: 3px;
+                }
+    
+                input{
+                    width: 100%;
+                    height: 5vh;
+                    border-radius: 0.8vw;
+                    font-family: DM_Sans;
+                    font-size: 1rem;
+                    padding: 0px 20px;
+                    color: #8CA2C0;
+                }
+            }
         }
 
         input:focus {
-            outline: none !important;
-            border-bottom: 1px solid black;
-            /* box-shadow: 0 0 0px #719ECE; */
+            outline: #680E28 !important;
+            border: 2px solid #680E28;
+
         }
 
         button{
-            margin: 0 auto;
-            height: 5vh;
-            width: 15vw;
+            margin: 0px auto 0 auto;
+            border: 1px solid white;
+            border-radius: 0.8vw;
+            background-color: #680E28;
+            font-size: 1rem;
+            height: 6vh;
+            width: 10vw;
         }
     }
 }
 
 footer{
     span{
-        color: #8CA2C0;
+        color: var(--text-color);
 
         a{
-            color: #8CA2C0;
+            color: var(--text-color);
             font-weight: bold;
             text-decoration: underline;
         }
