bruna pediu pra ver pr

--- a/cadastroLoginReact/src/index.css
+++ b/cadastroLoginReact/src/index.css
@@ -3,6 +3,6 @@ body{
     padding: 0;
     height: 100%;
     overflow: hidden;
-    background-image: url("/public/imgs/background-wave.png");
+    background-image: url("/imgs/background-wave.png");
     background-size: cover;
 }
