--- a/site-institucional-react/site-institucional/src/index.css
+++ b/site-institucional-react/site-institucional/src/index.css
@@ -1,5 +1,23 @@
 @import "tailwindcss";
 
+/* Width of the scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+  
+  }
+  
+  /* Track of the scrollbar */
+  ::-webkit-scrollbar-track {
+  background: #ffdec0;
+  
+  }
+  
+  /* Handle of the scrollbar */
+  ::-webkit-scrollbar-thumb {
+  background: #201010;
+  
+  }
+
 
 *{
   margin: 0;
@@ -13,6 +31,7 @@
 
 body{
   background-color: var(--bgcolor);
+  
   
 }
 
